<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/PaymentSetting"
            android:gravity="center"
            android:layout_weight="0"
            android:textAppearance="?android:attr/textAppearanceLarge"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dip"
            android:layout_weight="1"
            android:gravity="center|bottom"
            android:orientation="vertical">

            <Button
                android:id="@+id/BtnPaypal"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:text="@string/PaypalPayment"
                style="?android:attr/buttonStyleSmall"
                android:layout_gravity="center_horizontal|center"/>

            <Button
                android:id="@+id/BtnCard"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:text="@string/CardPayment"
                style="?android:attr/buttonStyleSmall"
                android:layout_gravity="center_horizontal|center"/>
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>